# job_warehouse

./: .gitignore  README.md  load_obs.py  main.py  pyproject.toml  transform_ads.py  transform_dwd.py  transform_dws.py
dags/: pipeline.py
